added a parse equation for the first 1-5 method